# scanner

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  action.yaml  entrypoint.py  pyproject.toml  sc4n3r.config.yaml
.github/workflows/: build.yml  enforce-branch.yml  scan.yml
audit/: __init__.py  aggregator.py  ai_enhancer.py  attack_chain.py  centralization.py  checklist_analyzer.py  defi_analyzer.py  github_inline.py  models.py  owasp_mapping.py  poc_generator.py  poc_validator.py  report_generator.py  run_audit.py  sarif_generator.py  solodit_client.py  token_compliance.py  tools-config.yaml  upgrade_safety.py
audit/detectors/: __init__.py  approval_race.py  fee_on_transfer.py  first_depositor_attack.py  flashloan_callback.py  missing_deadline.py  missing_slippage.py  missing_zero_address.py  oracle_single_source.py  read_only_reentrancy.py  selfdestruct_implementation.py  single_step_ownership.py  spot_price_reliance.py  storage_collision_proxy.py  unconstrained_mint.py  unprotected_initializer.py
audit/parsers/: __init__.py  aderyn.py  mythril.py  slither.py  solhint.py
